--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 
 .menu li a {
   display: block;
-  padding: 10px;
+  padding: 16px 10px;
   margin-right: 10px;
   color: #222;
   text-decoration: none;
@@ -96,6 +96,9 @@ body {
   grid-column: 2;
 }
 
+.animais-lista li {
+  cursor: pointer;
+}
 .animais-lista::-webkit-scrollbar {
   width: 18px;
 }
@@ -205,4 +208,23 @@ body {
   .copy {
     margin-bottom: 0px;
   }
+}
+
+.js .js-tabcontent section{
+  display: none;
+}
+.js-tabcontent section.ativo {
+  display: block !important;
+  animation: show .5s forwards;
+}
+
+@keyframes show {
+    from {
+      opacity: 0;
+      transform: translate3d(-30px, 0, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
 }
