--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,33 @@ body {
       transform: translate3d(0, 0, 0);
     }
 }
+
+.js .js-accordion dd {
+  display: none;
+}
+
+.js .js-accordion dt::after {
+  content: '⮧';
+  margin-left: 10px;
+
+}
+
+.js .js-accordion dt.ativo::after {
+  content: '⮤';
+}
+
+.js .js-accordion dd.ativo {
+  display: block;
+  animation: slideDow .5s forwards;
+}
+
+@keyframes slideDow {
+  from{
+    opacity: 0;
+    max-height: 0;
+  }
+  to{
+    max-height: 200px;
+    opacity: 1;
+  }
+}
