--- a/css/dropdown-menu.css
+++ b/css/dropdown-menu.css
@@ -7,7 +7,8 @@
   display: none;
 }
 
-[data-dropdown]:hover .dropdown-menu {
+[data-dropdown]:hover .dropdown-menu,
+[data-dropdown].active .dropdown-menu {
   display: block;
   animation: show-up .3s forwards;
 }
